add Reboot Needed column

--- a/ndn_diag/diag_header.html
+++ b/ndn_diag/diag_header.html
@@ -8,7 +8,7 @@
 <script type="text/JavaScript" src="mjs.js"></script>
 </head>
 NDN Diagnostics
-<table border ="1"; width="1310";>
+<table border ="1"; width="1390";>
 <tr><td width = 80px>&nbsp;</td>
 <td width = 250px; bgcolor ="#7CFC00">DATE</td>
 <td width = 80px; bgcolor ="#7CFC00">NFD PID</td>
@@ -23,4 +23,5 @@ NDN Diagnostics
 <td width = 80px; bgcolor ="#7CFC00">Boot Disk Used</td>
 <td width = 80px; bgcolor ="#7CFC00">Boot Disk Avail</td>
 <td width = 80px; bgcolor ="#7CFC00">Boot Disk Use %</td>
+<td width = 80px; bgcolor ="#7CFC00">Reboot Needed?</td>
 </tr>
